// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Analyzers NitroAnalyzer should analyze a project with installation and configs correctly 1`] = `
Object {
  "nitro": true,
  "nitroInstallation": Object {
    "declared": "4.3.2",
    "installed": null,
    "latest": "4.3.4",
    "location": "devDependencies",
  },
  "nitroViewEngine": "hbs",
}
`;

exports[`Analyzers NitroAnalyzer should analyze a project without nitro installation correctly 1`] = `
Object {
  "nitro": true,
  "nitroVersion": false,
  "nitroViewEngine": "hbs",
}
`;

exports[`Analyzers NitroAnalyzer should analyze a project without nitro template setting correctly 1`] = `
Object {
  "nitro": true,
  "nitroVersion": "4.3.2",
  "nitroViewEngine": "default",
}
`;
